<resources>
    <string name="app_name">MyM1yClean</string>
    <string name="login_lbl">Login</string>
    <string name="password_lbl">Password</string>
    <string name="login_confirm_text">Enter</string>
    <string name="signin_confirm_text">Signin</string>
    <string name="to_signup_text">To Sign Up</string>
    <string name="balance_label">Balance</string>
    <string name="balances_label">Balances</string>
    <string name="to_signin_text">To Sign In</string>
    <string name="signup_confirm_text">Signup</string>
    <string name="empty_password_error_message">Password is required!</string>
    <string name="empty_login_error_message">Login is required!</string>
    <string name="password_length_error_message">Password must be at least 6 characters!</string>
    <string name="login_valid_error_message">Login must be an email address!</string>
    <string name="empty_cash_accounts_text">empty cash accounts</string>
    <string name="add_new_cash_account_text">add new cash account +</string>
    <string name="empty_transactions_text">empty transactions</string>
    <string name="delete_cash_account_confirm_message">Cash account will be deleted!</string>
    <string name="error_sync_text">Error with sync! App need some data for first launch.</string>
    <string name="try_again">try again</string>
    <string name="set_currency_text">Set currency</string>
    <string name="enter_title_text">Enter title</string>
    <string name="set_cash_account_text">Set cash account</string>
    <string name="enter_count_text">Enter count</string>
    <string name="nothing_label">nothing</string>
    <string name="logout">Logout</string>
    <string name="or_enter_with">Or enter with:</string>
    <string name="user_info_name_lbl">Name</string>
    <string name="empty_user_info_name_error_message">Name is required!</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>
    <string name="settings_user_info_label_text">User info</string>
    <string name="settings_change_avatar_text">change avatar</string>
</resources>
