<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:gravity="center_vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:text="@string/login_lbl"
        android:textSize="14dp"
        android:textColor="@color/graydark"
        android:layout_marginLeft="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="25"
        android:textSize="16dp"
        android:textCursorDrawable="@drawable/edit_cursor_black"
        android:background="@drawable/edit_black"
        android:textColor="@color/black"
        android:paddingLeft="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
    <TextView
        android:text="@string/password_lbl"
        android:textSize="14dp"
        android:textColor="@color/graydark"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="25"
        android:textSize="16dp"
        android:textCursorDrawable="@drawable/edit_cursor_black"
        android:background="@drawable/edit_black"
        android:textColor="@color/black"
        android:paddingLeft="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
    <TextView
        android:id="@+id/confirm"
        android:text="@string/login_confirm_text"
        android:textSize="18dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
</LinearLayout>