<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/login_lbl"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/graydark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/login"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="25"
            android:textSize="@dimen/text_size_big"
            android:textCursorDrawable="@drawable/edit_cursor_black"
            android:background="@drawable/edit_black"
            android:textColor="@color/black"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/container_size_less"/>
        <TextView
            android:text="@string/password_lbl"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/graydark"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:lines="1"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="25"
            android:textSize="@dimen/text_size_big"
            android:textCursorDrawable="@drawable/edit_cursor_black"
            android:background="@drawable/edit_black"
            android:textColor="@color/black"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/container_size_less"/>
        <TextView
            android:id="@+id/signup"
            android:text="@string/signup_confirm_text"
            android:textSize="@dimen/text_size_large"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/container_size_less"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/to_signin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/container_size">
        <ImageView
            android:id="@+id/new_transaction"
            android:src="@mipmap/arrow_left"
            android:scaleType="center"
            android:tint="@color/black"
            android:layout_width="@dimen/container_size"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/to_signin_text"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/waiter"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="@color/white"
            android:alpha="0.85"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</FrameLayout>